--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -495,7 +495,7 @@
 // $tabbar-header-margin: 0;
 
 // Off Canvas Menu Variables
-// $off-canvas-width: 250px;
+$off-canvas-width: 300px;
 $off-canvas-bg: #FFF;
 
 // Off Canvas Menu List Variables
