--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,43 +1,40 @@
 <%= form_for @user do |f| %>
 
-  <div class="field">
-  <%= f.hidden_field :user_role_id, value: @user.user_role_id %></div>
+      <div class="field">
+      <%= f.hidden_field :user_role_id, value: @user.user_role_id %></div>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </div>
+      <div class="field">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name %>
+      </div>
 
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
+      <div class="field">
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name %>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
+      <div class="field">
+        <%= f.label :email %>
+        <%= f.text_field :email %>
+      </div>
 
-  <div class="field">
-    <%= f.label :organization %><br />
-    <%= f.text_field :organization %>
-  </div>
+      <div class="field">
+        <%= f.label :organization %>
+        <%= f.text_field :organization %>
+      </div>
 
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :location %>
-  </div>
+      <div class="field">
+        <%= f.label :location %>
+        <%= f.text_field :location %>
+      </div>
 
-  <div class="field">
-     <%= f.label :bio %><br />
-     <%= f.text_area :bio %>
-  </div>
-
-  <div class="interests">
-    <%= render "interests/interests_render" %>
-  </div>
-
-
-    <div class="actions"><%= f.submit %></div>
-
+      <div class="field">
+         <%= f.label :bio %>
+         <%= f.text_area :bio %>
+      </div>
+      <div class="actions"><%= f.submit "Update", :class => "button" %></div>
+    </div>
+    <div class="small-4 columns">
+        <%= render "interests/interests_render" %>
+    </div>
 <% end %>
