--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Edit user</h1>
-<%= render :partial => "form", :object => @user %>
+<div class="row">
+  <div class="small-8 columns">
+    <h1>Edit user</h1>
+    <%= render :partial => "form", :object => @user %>
