--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Create new user</h1>
-<%= render :partial => "register", :object => @user %>
+<div class="row">
+  <div class="small-8 columns">
+    <h1>Create new user</h1>
+    <%= render :partial => "register", :object => @user %>
