--- a/app/assets/stylesheets/callouts.css.scss
+++ b/app/assets/stylesheets/callouts.css.scss
@@ -17,7 +17,7 @@ aside dd{
 
 }
 aside p{
-  color: white;
+  color: black;
 }
 aside input[name='interests[]']{
   clear: left;
@@ -37,7 +37,6 @@ div content{
   color: #222222;
   background: white;
   width: 100%;
-  display: inline;
 
 }
 
@@ -55,7 +54,6 @@ div content{
 }
 
 .callout-display img{
-  
   width: 75%;
 }
 
@@ -63,8 +61,6 @@ div content{
   vertical-align: center;
   margin-top: 20px;
 }
-
-
 
 .callout-display:hover{
   box-shadow: 0px 0px 3px 4px #00a6cf;
