--- a/app/views/callouts/edit.html.erb
+++ b/app/views/callouts/edit.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.user_role_id == 1 %>
-  <%= render "callouts/form", :header => "Edit your callout, homie", :end_time => "Deadline" %>
+  <%= render "callouts/form", :header => "Edit your callout", :end_time => "Deadline" %>
 <% else %>
-  <%= render "callouts/form", :header => "Edit your story suggestion, dork", :end_time => "Expiration Date" %>
+  <%= render "callouts/form", :header => "Edit your story suggestion", :end_time => "Expiration Date" %>
 <% end %>
