--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,7 +25,7 @@
         <%= link_to (callout_path(c.id)) do %>
           <div class="callout-display">
             <%= image_tag(c.image) %>
-          <p><%= c.subject %></p>
+          <p><%= c.subject.truncate(20) %></p>
           </div>
         <% end %>
       <% end %>
