--- a/app/views/callouts/_messages.html.erb
+++ b/app/views/callouts/_messages.html.erb
@@ -5,7 +5,7 @@
       <p><%=r.comment%> <em>by 
         <% if r.sender.is_source? %>
           <%= link_to r.sender.first_name, user_path(r.sender.id) %> 
-        <% elsif r.sender == current_user %>  
+        <% elsif r.sender == current_user %> 
           <%= r.sender.first_name %>
         <% else %>
           a media user from <%= r.sender.location %>
@@ -13,12 +13,13 @@
         on <%=r.created_at%></em></p>
     <% end %>
   <% end %>
-    <%= form_for [callout, reply], :remote => true do |f| %>
+    <%= form_for [callout, Reply.new], :remote => true do |f| %>
       <div class="field">
         <%= f.label :comment%><br />
         <%= f.text_area :comment %>
         <%= f.hidden_field :sender_id, :value => current_user.id %>
         <%= f.hidden_field :receiver_id, :value => messenger.id %>
+        <%= f.hidden_field :is_read, :value => false %>
       </div>
 
       <div class="actions">
