--- a/app/assets/stylesheets/callouts.css.scss
+++ b/app/assets/stylesheets/callouts.css.scss
@@ -2,6 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#image_container {
+  height: 200px;
+  overflow:hidden;
+}
+
+#main_image {
+  width:100%;
+  margin-top: -200px;
+}
 
 .callout_headline{
   text-align: center;
