--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,22 +1,21 @@
   <div class="large-4 columns left-col ">
 
     <div class="lowerleft">
-      <h2><%= @user.first_name.capitalize %> <%= @user.last_name.capitalize %></h2>
-      <% if current_user == @user %>
-        <%= link_to "Edit your profile", edit_user_path, :class=>"button" %>
-      <% end %>
+      <h2 styl="float:left"><%= @user.first_name.capitalize %> <%= @user.last_name.capitalize %></h2>
 
-      <div><%= image_tag 'email.png', size:"30" %> <%= @user.email %></div>
-      <div><%= image_tag 'place-512.png', size:"25" %><%= @user.location %></div>
-      <div><%= image_tag ''
+      <div class="info"><%= image_tag 'email.png', size:"30" %> <%= @user.email %></div>
+      <div class="info"><%= image_tag 'place.png', size:"25" %> <%= @user.location %></div>
+      <div class="info"><%= image_tag 'work.png', size:"25" %> <%=@user.organization%></div>
       <h3>Bio:</h3><p><%= @user.bio %></p>
-      <h3><%= @user.organization %></h3>
       <div>
       <h3>Interests:</h3>
         <% @user.interests.each do |i| %>
           <li style="list-style-type:none"><%= i.topic %>: <%= i.name %></li>
         <% end %>
       </div>
+      <% if current_user == @user %>
+        <div style="float:right"><%= link_to "Edit your profile", edit_user_path, :class=>"button small" %></div>
+      <% end %>
     </div>
   </div>
   <div class="large-8 columns right-col">
