--- a/app/views/callouts/new.html.erb
+++ b/app/views/callouts/new.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="small-12 small-centered columns">
     <% if current_user.user_role_id == 1 %>
-    <div class="user_count"<p><%="#{@interested_sources.length} sources share the selected interests."%></p></div>
+    <div class="user_count"><p><%=render :partial => 'callouts/users_count', :locals => {:interested_media => @interested_media, :interested_sources => @interested_sources} %></p></div>
       <%= render "callouts/form", :header => "Create a new Callout", :end_time => "Deadline" %>
     <% else %>
-      <div class="user_count"><p><%="#{@interested_media.length} members of the media share the selected interests."%></p></div>
+      <div class="user_count"><p><%=render :partial => 'callouts/users_count', :locals => {:interested_media => @interested_media, :interested_sources => @interested_sources} %></p></div>
       <%= render "callouts/form", :header => "Create a New Story Suggestion", :end_time => "Expiration Date" %>
     <% end %>
   </div>
