--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -56,7 +56,7 @@
 
 .left-col {
   background-color: #ADE2F0;
-  box-shadow: 10px 0px 5px #888888;
+  box-shadow: 2px 0px 1px #49c51d;
 }
 .lowerleft {
   padding: 20px;
@@ -112,6 +112,7 @@
   box-shadow: 2px 2px 5px #888888;
   float:left;
 }
+
 .interests li {
   list-style-type: none;
 }
