--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,6 +29,11 @@
       </div>
 
       <div class="field">
+        <%=f.label :image %>
+        <%=f.file_field :image %>
+      </div>
+
+      <div class="field">
          <%= f.label :bio %>
          <%= f.text_area :bio %>
       </div>
