--- a/app/views/callouts/show.html.erb
+++ b/app/views/callouts/show.html.erb
@@ -1,13 +1,17 @@
 <div id="image_container"><%= image_tag @callout.image, :id => "main_image" %></div>
 <div class="row">
   <div class="large-6 columns">
-    <h3><b>Callout: <%= @callout.subject %></b></h3>
+    <% if @callout.user.is_media? %>
+      <h3><b>Callout: <%= @callout.subject %></b></h3>
+    <% else %>
+      <h3><b>Story Suggest: <%= @callout.subject %></b></h3>
+    <% end %>
     <% if @callout.user == current_user %>
       <h5><b>By:</b> You</h5>
     <% elsif @callout.user.is_media? %>
       <h5><b>By:</b> Media Member from <%= @callout.user.location %></h5>
     <% else %>  
-      <h5><b>By:</b> <%= @callout.user.first_name %></h5>
+      <h5><b>By:</b> <%= link_to @callout.user.first_name, user_path(@callout.user.id) %></h5>
     <% end %>
     <h5><b>Time Left:</b> <%= distance_of_time_in_words(@callout.deadline.in_time_zone("Islamabad"), Time.now) %></h5>
     <h5><b>Interests:</b> <% @callout.interests.each do |i| %><%= i.name %> | <% end %></h5>
