--- a/app/views/callouts/count.js.erb
+++ b/app/views/callouts/count.js.erb
@@ -1,1 +1,1 @@
-$('.count').html("<%= j(render :partial => 'callouts_count', :locals => {:media_callouts => @media_callouts, :story_suggests => @story_suggests}) %>")
+$('.count').html("<%= j(render :partial => 'callouts_count', :locals => {:media_callouts => @media_callouts}) %>")
