--- a/app/views/callouts/users_count.js.erb
+++ b/app/views/callouts/users_count.js.erb
@@ -1,1 +1,1 @@
-$('.user_count').html("<%= j(render :partial => 'users_count', :locals => {:interested_sources => @interested_sources, :interested_media => @interested_media}) %>")
+$('.user_count').html("<%= j(render :partial => 'users_count', :locals => {:interested_users => @interested_users}) %>")
