--- a/app/views/callouts/_callouts_count.html.erb
+++ b/app/views/callouts/_callouts_count.html.erb
@@ -1,6 +1,6 @@
 <% if current_user.user_role_id == 1 %>
-  <% if story_suggests %>
-  <p class="count"><%="#{story_suggests.length} callouts match the selected interests." %></p>
+  <% if media_callouts %>
+  <p class="count"><%="#{media_callouts.length} story suggestions match the selected interests." %></p>
   <% end %>
 <% else %>
   <% if media_callouts %>
