--- a/app/views/callouts/_users_count.html.erb
+++ b/app/views/callouts/_users_count.html.erb
@@ -1,9 +1,9 @@
 
 <% if current_user.user_role_id == 1 %>
-<%="#{interested_sources.length} sources share the selected interests."%>
+<%="#{interested_users.length} sources share the selected interests."%>
 
 <% else %>
 
-<%="#{interested_media.length} members of the media share the selected interests."%>
+<%="#{interested_users.length} members of the media share the selected interests."%>
 
 <% end %>
